refactor Be Concise IV - Index of an element in an array.java